# minitor

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pkg.config.json
.github/workflows/: release.yml
desktop/: package.json  unquarantine.command
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: deps.rs  lib.rs  main.rs  server.rs
desktop/src-ui/: index.html
public/: index.html
scripts/: check-tvdb.mjs
src/: addon.js  anilist.js  api.js  archive.js  cache.js  cinemeta.js  config.js  index.js  jackett-setup.js  jackett.js  kitsu.js  packs.js  qbittorrent.js  resolve-magnet.js  search.js  stream.js  tvdb.js  util.js
